--- a/Profile PDF/index.html
+++ b/Profile PDF/index.html
@@ -206,6 +206,7 @@
                     background-color: #eae6ed;
                     padding: 20px;
                     border-radius: 10px;
+                    margin-top: -20px;
                   "
                 >
                   <tr>
@@ -250,7 +251,7 @@
                               "
                             >
                               <tr>
-                                <td>
+                                <td style="margin: 0">
                                   <p
                                     style="
                                       font-size: 8.72px;
@@ -268,7 +269,9 @@
                                       alt=""
                                     />
                                   </p>
-                                  <p style="border: 1px solid #eae6ed"></p>
+                                  <p
+                                    style="border: 1px solid #eae6ed; margin: 0"
+                                  ></p>
 
                                   <p
                                     style="
@@ -287,7 +290,9 @@
                                       alt=""
                                     />
                                   </p>
-                                  <p style="border: 1px solid #eae6ed"></p>
+                                  <p
+                                    style="border: 1px solid #eae6ed; margin: 0"
+                                  ></p>
                                   <p
                                     style="
                                       font-size: 8.72px;
@@ -305,7 +310,9 @@
                                       alt=""
                                     />
                                   </p>
-                                  <p style="border: 1px solid #eae6ed"></p>
+                                  <p
+                                    style="border: 1px solid #eae6ed; margin: 0"
+                                  ></p>
                                   <p
                                     style="
                                       font-size: 8.72px;
@@ -323,7 +330,9 @@
                                       alt=""
                                     />
                                   </p>
-                                  <p style="border: 1px solid #eae6ed"></p>
+                                  <p
+                                    style="border: 1px solid #eae6ed; margin: 0"
+                                  ></p>
                                   <p
                                     style="
                                       font-size: 7.47px;
@@ -449,31 +458,10 @@
                       <table align="center" width="233.44">
                         <tr>
                           <td>
-                            <img src="" alt="">
-                          </td>
-                        </tr>
-                      </table>
-                      <table
-                        cellspacing="0"
-                        cellpadding="0"
-                        border="0"
-                        width="233.44"
-                        style="
-                          background-color: #ffffff;
-                          padding: 10px 15px;
-                          border-radius: 5px;
-                          margin-top: 7.47px;
-                        "
-                      >
-                        <tr>
-                          <td style="font-size: 7.47px; line-height: 11.21px">
-                            I am an easy going person with a positive attitude
-                            towards life. Iam simple, soft spoken, respectful
-                            person with the right mix of modern and traditional
-                            cultures. I have seen life take unexpected turns and
-                            every time I thought there is no way out, thanks to
-                            Almighty his grace and guidance has bring back light
-                            and happiness to my life.
+                            <img src="./Rectangle 12.png" alt="" />
+                            <img src="./Rectangle 13.png" alt="">
+                            <img src="./Rectangle 14.png" alt="">
+                            <img src="./Rectangle 15.png" alt="">
                           </td>
                         </tr>
                       </table>
@@ -484,10 +472,55 @@
                               <img
                                 align="center"
                                 style="margin-right: 4px"
-                                src="./info.png"
+                                src="./match.png"
                                 alt=""
                               />
-                              Basic Info
+                              Her Ideal Match
+                            </p>
+                            <table
+                              cellspacing="0"
+                              cellpadding="0"
+                              border="0"
+                              width="233.44"
+                              style="
+                                background-color: #ffffff;
+                                padding: 10px 15px;
+                                border-radius: 5px;
+                                margin-top: 7.47px;
+                              "
+                            >
+                              <tr>
+                                <td
+                                  style="
+                                    font-size: 7.47px;
+                                    line-height: 11.21px;
+                                  "
+                                >
+                                  I am an easy going person with a positive
+                                  attitude towards life. Iam simple, soft
+                                  spoken, respectful person with the right mix
+                                  of modern and traditional cultures. I have
+                                  seen life take unexpected turns and every time
+                                  I thought there is no way out, thanks to
+                                  Almighty his grace and guidance has bring back
+                                  light and happiness to my life.
+                                </td>
+                              </tr>
+                            </table>
+                          </td>
+                        </tr>
+                      </table>
+                      <table>
+                        <tr>
+                          <td>
+                            <p style="font-size: 10px; color: #310048">
+                              <img
+                                align="center"
+                                style="margin-right: 4px"
+                                src="./lyfe.png"
+                                alt=""
+                              />
+                              Physical Appearance & Lifestyle
                             </p>
                             <table
                               cellspacing="0"
@@ -509,16 +542,17 @@
                                     font-weight: 600;
                                   "
                                 >
-                                  <p>Gender</p>
-                                  <p>Age</p>
-                                  <p>Lives In</p>
-                                  <p>Home Type</p>
-                                  <p>Relocation Plan</p>
-                                  <p>Ethnic Origin</p>
-                                  <p>Residency Status</p>
-                                  <p>Marital Status</p>
-                                  <p>Spoken Language</p>
-                                  <p>Wali</p>
+                                  <p>Height</p>
+                                  <p>Hair Color</p>
+                                  <p>Hair Type</p>
+                                  <p>Hair Length</p>
+                                  <p>Complexion</p>
+                                  <p>Blood Group</p>
+                                  <p>Health Condition</p>
+                                  <p>Food Habit</p>
+                                  <p>Body Type</p>
+                                  <p>Physical Health Status</p>
+                                  <p>Wear a Hijab</p>
                                 </td>
                                 <td
                                   style="
@@ -526,16 +560,17 @@
                                     line-height: 11.21px;
                                   "
                                 >
-                                  <p>: Female</p>
-                                  <p>: 23</p>
-                                  <p>: Dhaka,Bangladesh</p>
-                                  <p>: Apartment</p>
-                                  <p>: Not sure about relocating</p>
-                                  <p>: Asian - bangladeshi</p>
-                                  <p>: Citizenship</p>
-                                  <p>: Never Married</p>
-                                  <p>: Bangali, English</p>
-                                  <p>: Father</p>
+                                  <p>: 5’3” (161 cm)</p>
+                                  <p>: Black</p>
+                                  <p>: Straight</p>
+                                  <p>: Long</p>
+                                  <p>: White Ethnic Complexion</p>
+                                  <p>: A+</p>
+                                  <p>: Normal</p>
+                                  <p>: Halal foods always</p>
+                                  <p>: Average</p>
+                                  <p>: Normal</p>
+                                  <p>: Always Hijab</p>
                                 </td>
                               </tr>
                             </table>
