this is second day

--- a/Profile PDF/index.html
+++ b/Profile PDF/index.html
@@ -452,6 +452,119 @@
                           </td>
                         </tr>
                       </table>
+                      <table>
+                        <tr>
+                          <td>
+                            <p style="font-size: 10px; color: #310048">
+                              <img
+                                align="center"
+                                style="margin-right: 4px"
+                                src="./family.png"
+                                alt=""
+                              />
+                              Family Details
+                            </p>
+                            <table
+                              cellspacing="0"
+                              cellpadding="0"
+                              border="0"
+                              width="233.44"
+                              style="
+                                background-color: #ffffff;
+                                padding: 10px 15px;
+                                border-radius: 5px;
+                                margin-top: 7.47px;
+                              "
+                            >
+                              <tr>
+                                <td
+                                  style="
+                                    font-size: 7.47px;
+                                    line-height: 11.21px;
+                                    font-weight: 600;
+                                  "
+                                >
+                                  <p>Father’s Status</p>
+                                  <p>Mother’s Status</p>
+                                  <p>Financial Status</p>
+                                  <p>Family Location</p>
+                                  <p>Father’s Ethnic Origin</p>
+                                  <p>Mother’s Ethnic Origin</p>
+                                  <p>Family Type</p>
+                                  <p>Family Values</p>
+                                  <p>Male Sibling</p>
+                                  <p>Female Sibling</p>
+                                </td>
+                                <td
+                                  style="
+                                    font-size: 7.47px;
+                                    line-height: 11.21px;
+                                  "
+                                >
+                                  <p>: Job holder</p>
+                                  <p>: Housewife</p>
+                                  <p>: Rich</p>
+                                  <p>: Uganda</p>
+                                  <p>:</p>
+                                  <p>:</p>
+                                  <p>:</p>
+                                  <p>:</p>
+                                  <p>: 04</p>
+                                  <p>: 02</p>
+                                </td>
+                              </tr>
+                            </table>
+                          </td>
+                        </tr>
+                      </table>
+                      <table>
+                        <tr>
+                          <td>
+                            <p style="font-size: 10px; color: #310048">
+                              <img
+                                align="center"
+                                style="margin-right: 4px"
+                                src="./personality.png"
+                                alt=""
+                              />
+                              Personality & Hobbies
+                            </p>
+                            <table
+                              cellspacing="0"
+                              cellpadding="0"
+                              border="0"
+                              width="233.44"
+                              style="
+                                background-color: #ffffff;
+                                padding: 10px 15px;
+                                border-radius: 5px;
+                                margin-top: 7.47px;
+                              "
+                            >
+                              <tr>
+                                <td
+                                  style="
+                                    font-size: 7.47px;
+                                    line-height: 11.21px;
+                                    font-weight: 600;
+                                  "
+                                >
+                                  <p>What sort of food do you like?</p>
+                                  <p>What sort of music do you like?</p>
+                                  <p>What are your main personality traits?</p>
+                                  <p>What are the countries you visited?</p>
+                                  <p>
+                                    How would you like to spend weekend with
+                                    your family?
+                                  </p>
+                                  <p>What are the types of books you like?</p>
+                                  <p>What are your hobbies?</p>
+                                </td>
+                              </tr>
+                            </table>
+                          </td>
+                        </tr>
+                      </table>
                     </td>
                     <!-- Photo -->
                     <td>
@@ -459,9 +572,9 @@
                         <tr>
                           <td>
                             <img src="./Rectangle 12.png" alt="" />
-                            <img src="./Rectangle 13.png" alt="">
-                            <img src="./Rectangle 14.png" alt="">
-                            <img src="./Rectangle 15.png" alt="">
+                            <img src="./Rectangle 13.png" alt="" />
+                            <img src="./Rectangle 14.png" alt="" />
+                            <img src="./Rectangle 15.png" alt="" />
                           </td>
                         </tr>
                       </table>
@@ -571,6 +684,172 @@
                                   <p>: Average</p>
                                   <p>: Normal</p>
                                   <p>: Always Hijab</p>
+                                </td>
+                              </tr>
+                            </table>
+                          </td>
+                        </tr>
+                      </table>
+                      <table>
+                        <tr>
+                          <td>
+                            <p style="font-size: 10px; color: #310048">
+                              <img
+                                align="center"
+                                style="margin-right: 4px"
+                                src="./religious.png"
+                                alt=""
+                              />
+                              Religious Status
+                            </p>
+                            <table
+                              cellspacing="0"
+                              cellpadding="0"
+                              border="0"
+                              width="233.44"
+                              style="
+                                background-color: #ffffff;
+                                padding: 10px 15px;
+                                border-radius: 5px;
+                                margin-top: 7.47px;
+                              "
+                            >
+                              <tr>
+                                <td
+                                  style="
+                                    font-size: 7.47px;
+                                    line-height: 11.21px;
+                                    font-weight: 600;
+                                  "
+                                >
+                                  <p>Religious History</p>
+                                  <p>Sect</p>
+                                  <p>Polygamy</p>
+                                  <p>Pray</p>
+                                  <p>How often do you read Quran?</p>
+                                  <p>Do you read Islamic books, lectures?</p>
+                                  <p>Relgious Commitment Level</p>
+                                </td>
+                                <td
+                                  style="
+                                    font-size: 7.47px;
+                                    line-height: 11.21px;
+                                  "
+                                >
+                                  <p>: Muslim since birth</p>
+                                  <p>: Hanafi</p>
+                                  <p>: Will not consider</p>
+                                  <p>: 5 times everyday strictly</p>
+                                  <p>: Only during Friday</p>
+                                  <p>: Occasionally</p>
+                                  <p>: Moderately Practising</p>
+                                </td>
+                              </tr>
+                            </table>
+                          </td>
+                        </tr>
+                      </table>
+                      <table>
+                        <tr>
+                          <td>
+                            <p style="font-size: 10px; color: #310048">
+                              <img
+                                align="center"
+                                style="margin-right: 4px"
+                                src="./education.png"
+                                alt=""
+                              />
+                              Education & Career
+                            </p>
+                            <table
+                              cellspacing="0"
+                              cellpadding="0"
+                              border="0"
+                              width="233.44"
+                              style="
+                                background-color: #ffffff;
+                                padding: 10px 15px;
+                                border-radius: 5px;
+                                margin-top: 7.47px;
+                              "
+                            >
+                              <tr>
+                                <td
+                                  style="
+                                    font-size: 7.47px;
+                                    line-height: 11.21px;
+                                    font-weight: 600;
+                                  "
+                                >
+                                  <p>Education</p>
+                                  <p>Institute Name</p>
+                                  <p>Profession</p>
+                                  <p>Occupation Status</p>
+                                  <p>Annual income</p>
+                                </td>
+                                <td
+                                  style="
+                                    font-size: 7.47px;
+                                    line-height: 11.21px;
+                                  "
+                                >
+                                  <p>: Muslim since birth</p>
+                                  <p>:</p>
+                                  <p>: Computer Professional</p>
+                                  <p>: Full Time</p>
+                                  <p>:</p>
+                                </td>
+                              </tr>
+                            </table>
+                            <table
+                              cellspacing="0"
+                              cellpadding="0"
+                              border="0"
+                              width="233.44"
+                              style="
+                                background-color: #ffffff;
+
+                                border-radius: 5px;
+                                margin-top: 7.47px;
+                              "
+                            >
+                              <tr>
+                                <td
+                                  style="
+                                    background-image: url(./background02.png);
+                                    width: 233.44px;
+                                    height: 79.68px;
+                                  "
+                                >
+                                  <table style="margin: 8.9px 16.81px">
+                                    <tr>
+                                      <td>
+                                        <img src="./Frame 811765.png" alt="" />
+                                      </td>
+                                      <td align="center" valign="middle; " width="100%">
+                                        <a href="#" style="
+                                       
+                                          display: inline-block;
+                                          font-size: 8.72px;
+                                          line-height: 12.45px;
+                                          text-align: center;
+                                          padding: 4px 8px;
+                                          background-color: #BA0060;
+                                          color: #ffffff;
+                                          text-decoration: none;
+                                          border-radius: 4px;
+                                          
+                                        ">Improve Match</a>
+                                      </td>
+                                      <td align="right" width="100%">
+                                        <img
+                                          style="align-items: end"
+                                          src="./Frame 811764.png"
+                                          alt=""
+                                        />
+                                      </td>
+                                    </tr>
+                                  </table>
                                 </td>
                               </tr>
                             </table>
