--- a/Profile PDF/index.html
+++ b/Profile PDF/index.html
@@ -818,39 +818,162 @@
                                   style="
                                     background-image: url(./background02.png);
                                     width: 233.44px;
-                                    height: 79.68px;
                                   "
                                 >
                                   <table style="margin: 8.9px 16.81px">
                                     <tr>
                                       <td>
-                                        <img src="./Frame 811765.png" alt="" />
+                                        <img
+                                          src="./Frame 811765.png"
+                                          style="display: block"
+                                          alt=""
+                                        />
+                                        <p
+                                          style="
+                                            font-size: 7.47px;
+                                            margin: 4px 0 0 0;
+                                            color: #ffffff;
+                                          "
+                                        >
+                                          Her Preferences
+                                        </p>
                                       </td>
-                                      <td align="center" valign="middle; " width="100%">
-                                        <a href="#" style="
-                                       
-                                          display: inline-block;
-                                          font-size: 8.72px;
-                                          line-height: 12.45px;
-                                          text-align: center;
-                                          padding: 4px 8px;
-                                          background-color: #BA0060;
-                                          color: #ffffff;
-                                          text-decoration: none;
-                                          border-radius: 4px;
-                                          
-                                        ">Improve Match</a>
+
+                                      <td
+                                        align="center"
+                                        valign="middle; "
+                                        width="100%"
+                                      >
+                                        <a
+                                          href="#"
+                                          style="
+                                            display: inline-block;
+                                            font-size: 8.72px;
+                                            line-height: 12.45px;
+                                            text-align: center;
+                                            padding: 4px 8px;
+                                            background-color: #ba0060;
+                                            color: #ffffff;
+                                            text-decoration: none;
+                                            border-radius: 4px;
+                                          "
+                                          >Improve Match</a
+                                        >
                                       </td>
                                       <td align="right" width="100%">
                                         <img
-                                          style="align-items: end"
+                                          style="display: block"
                                           src="./Frame 811764.png"
                                           alt=""
                                         />
+                                        <p
+                                          style="
+                                            font-size: 7.47px;
+                                            margin: 4px 0 0 0;
+                                            color: #ffffff;
+                                          "
+                                        >
+                                          Your Match
+                                        </p>
                                       </td>
                                     </tr>
                                   </table>
                                 </td>
+                                <table
+                                  cellspacing="0"
+                                  cellpadding="0"
+                                  border="0"
+                                  width="233.44"
+                                  style="
+                                    background-color: #ffffff;
+                                    padding: 10px 15px;
+                                    border-bottom-left-radius: 5px;
+                                    border-bottom-right-radius: 5px;
+                                  "
+                                >
+                                  <tr>
+                                    <td
+                                      style="
+                                        font-size: 7.47px;
+                                        line-height: 11.21px;
+                                        font-weight: 600;
+                                      "
+                                    >
+                                      <p style="font-size: 7.47px; color: #BA0060; line-height: 11.21px;">Age</p>
+                                      <p style="font-size: 7.47px; color: #22222299; line-height: 11.21px;">
+                                        29 to 33<img
+                                          src="./blue.png"
+                                          align="right"
+                                          alt=""
+                                        />
+                                      </p>
+                                      <p style="font-size: 7.47px; color: #BA0060; line-height: 11.21px;">Height</p>
+                                      <p style="font-size: 7.47px; color: #22222299; line-height: 11.21px;">
+                                        5' 8"(172cm) to 6' 3"(190cm)<img
+                                          src="./blue.png"
+                                          align="right"
+                                          alt=""
+                                        />
+                                      </p>
+                                      <p style="font-size: 7.47px; color: #BA0060; line-height: 11.21px;">Marital Status</p>
+                                      <p style="font-size: 7.47px; color: #22222299; line-height: 11.21px;">
+                                        Never Married<img
+                                          src="./blue.png"
+                                          align="right"
+                                          alt=""
+                                        />
+                                      </p>
+                                      <p style="font-size: 7.47px; color: #BA0060; line-height: 11.21px;">Religious Commitment Level</p>
+                                      <p style="font-size: 7.47px; color: #22222299; line-height: 11.21px;">
+                                        High<img
+                                          src="./blue.png"
+                                          align="right"
+                                          alt=""
+                                        />
+                                      </p>
+                                      <p style="font-size: 7.47px; color: #BA0060; line-height: 11.21px;">Religion / Community</p>
+                                      <p style="font-size: 7.47px; color: #22222299; line-height: 11.21px;">
+                                        Muslim<img
+                                          src="./blue.png"
+                                          align="right"
+                                          alt=""
+                                        />
+                                      </p>
+                                      <p style="font-size: 7.47px; color: #BA0060; line-height: 11.21px;">Mother Tongue</p>
+                                      <p style="font-size: 7.47px; color: #22222299; line-height: 11.21px;">
+                                        Bengali, English, French<img
+                                          src="./blue.png"
+                                          align="right"
+                                          alt=""
+                                        />
+                                      </p>
+                                      <p style="font-size: 7.47px; color: #BA0060; line-height: 11.21px;">Country Living in</p>
+                                      <p style="font-size: 7.47px; color: #22222299; line-height: 11.21px;">
+                                        India, Malaysia, United Kingdom, Canada<img
+                                          src="./blue.png"
+                                          align="right"
+                                          alt=""
+                                        />
+                                      </p>
+                                      <p style="font-size: 7.47px; color: #BA0060; line-height: 11.21px;">Annual Income</p>
+                                      <p style="font-size: 7.47px; color: #22222299; line-height: 11.21px;">
+                                        Above USD 100,000<img
+                                          src="./blue.png"
+                                          align="right"
+                                          alt=""
+                                        />
+                                      </p>
+                                      <p style="font-size: 7.47px; color: #BA0060; line-height: 11.21px;">Blood Group</p>
+                                      <p style="font-size: 7.47px; color: #22222299; line-height: 11.21px;">
+                                        O+<img
+                                          src="./blue.png"
+                                          align="right"
+                                          alt=""
+                                        />
+                                      </p>
+                                    </td>
+                                  </tr>
+                                </table>
                               </tr>
                             </table>
                           </td>
